Simplify evalsummary
The information (and more (acpl)) is already modelled,
so no need to calculate it again...
Update to chariot-0.0.34 for access to GameUser.name() method.